--- a/part5/csd.Rmd
+++ b/part5/csd.Rmd
@@ -5,14 +5,12 @@ editor_options:
 ---
 # (PART) EMA Case Studies {-}
 
+# Early Warning Signs of Depression {#csd}
 
-# Early Warning Signals of Depression: The Critical Slowing Down Study {#csd}
-
-One of the unique selling points of EMA is that it might help to identify early
-warning signs of serious mental health detoriation. Subtle changes in time
-series of mood variables, for example, might signal a depression relapse. If we
-can reliably identify detect these changes, it might be possible to intervene
-early, to prevent the relapse from occuring.
+One of the promises of EMA is that it might detect signs of mental health
+detoriation in an early stage. Subtle changes in time series of mood variables,
+for example, might signal a depression relapse. If we can reliably detect these
+changes, preventive interventions can be triggered to avoid the relapse.
 
 But what changes, exactly, should we look for? What are these early warning
 signs?
@@ -21,34 +19,27 @@ signs?
 ## Critical Slowing Down
 
 Critical Slowing Down (CSD) is a concept from dynamic systems theory. In
-a dynamic system, the theory posits, qualitative state changes
-are preceded by a change in which the system recovers from disturbances
-(perturbations). In the stable situation, the systems quickly recovers back to
-the equilibrium state. Prior to a transition to a new equilibrium, however, this
-recovery-time increases. 
+dynamic systems, state transitions are preceded by a change in which the system
+reacts to disturbances. In a stable state, the system quickly recovers from
+disturbances. Prior to a transition to a new state, however, the system takes
+more and more time to recover back to its current state.
 
-There are three statistical indicators of CSD [Scheffer2009; Dakos2010]:
+In (multivariate) time series, three statistical indicators of CSD have been identified [Scheffer2009; Dakos2010]:
 
-- Increased variance
+- Increased variance,
 
-- Increased auto-correlation
+- Increased auto-correlation,
 
-- Increased spatial correlation (i.e., iter-item correlations)
+- Increased correlation between system components
 
+In an explorative study [@VandeLeemput2014], data suggested that CSD was associated with depression severity. This was a between-subject finding, however. CSD remained to be demonstrated in within-subject data.
 
-## The CSD N = 1 Study
-
-In an explorative study, data suggested that CSD was associated with depression severity [VandeLeemput2014]. This was a between-subject finding, however. CSD remained to be demonstrated in within-subject data.
-
-In this chapter, we re-construct a study that aimed to demonstrate CSD in
-EMA-data of a single patient with a history of major depression [@Groot2010,
+In this chapter, we re-analyze data from a study that aimed to demonstrate CSD
+in EMA-data of a single patient with a history of major depression [@Groot2010,
 @Kossakowski2017; @Wichers2016]. The patient, a 57-year old male, monitored
-himself extensively for 239 days, during a single case double-blind medication
-reduction trial. While doing so, he experienced a relapse. Was this transition
-preceded by a CSD of his mood state?
-
-
-## Preliminaries
+himself extensively with EMA during a 239-day single-case double-blind
+medication reduction trial. In this experiment, he experienced a relapse. Was
+this transition preceded by CSD in the EMA data?
 
 For this reconstruction, we need two R packages: 
 
@@ -58,20 +49,21 @@ For this reconstruction, we need two R packages:
 - To manipulate the raw data and reconstruct the plots of the article, we are
 going to use several functions from the tidyverse.
 
-```{r cs131, eval = FALSE}
+```{r cs131}
 # Code snippet 13.1: required libraries for the csd reconstruction
 library(emaph)
 library(tidyverse)
+library(broom)
 ```
 
 
 ## Plotting the course of depression 
 
 Let's take a look at the development of depressive symptoms first. These were
-tapped with weekly assessments. The patient answered all thirtheen items of
-the depression scale of the 'Symptom Checklist-90-Revised' (SCL-90-R), a well-established self-report measure [@Derogatis1994].
+tapped with weekly assessments. The patient answered all thirteen items of
+the depression scale of the 'Symptom Checklist-90-Revised' (SCL-90-R), a well-established self-report questionnaire [@Derogatis1994].
 
-The code below reconstructs Figure 1 in the Wichers et al study. It plots `csd$scl90r_dep`, the SCL90-R depression scale score (the mean of the SCL-90 item-scores), by `csd$dayno`(the time variable). Different phases of the experiment (`csd$phase`) are marked by different colors. 
+The code below reconstructs Figure 1 in the 2016 article of Wichers et al. It plots `csd$scl90r_dep`, the SCL90-R depression scale score (the mean of the SCL-90 item-scores), by `csd$dayno`(the time variable).
 
 ```{r cs132, fig.asp = .4}
 # Code snippet 13.2: Plot depression score
@@ -91,9 +83,9 @@ e1 = e.divisive(matrix(dep$scl90r_dep), sig = .01, min.size = 5)
 dep$cluster <- e1$cluster
 ```
 
-### Defining the mental states
+## Mental state EMA-items
 
-The researchers selected 13 items from the full EMA dataset. They grouped
+Wichers and colleagues selected 13 items from the full EMA dataset. They grouped
 these items in 5 factors: positive affect (pa; 4 items), negative affect (na; 4
 items), mental unrest (mu; 3 items), suspiciousness (su; 1 item), and worrying
 (wo; 1 item). 
@@ -131,9 +123,6 @@ csd$su <- csd$mood_suspic
 csd$wo <- csd$pat_worry
 ```
 
-
-### Remove rows with many missing values.
-
 In this reconstruction, we calculate the overall mental state score as the sum
 of the detrended scores of the five factors.
 
@@ -153,8 +142,7 @@ csd <- csd %>% filter(nna == 0)
 
 ## De-trending the mood states
 
-Since trends in time-series can distort the variance and autocorrelation, we
-mood state variables were detrended.
+Since trends in time-series can distort the variance and auto-correlation (see Chapter 8), mood state variables were de-trended.
 
 To de-trend, we fit a generalized additive model with a spline-based smoother.
 This models the trend. By using the residuals of his model (i.e., by subtracting
@@ -176,7 +164,7 @@ csd$su_dt <- detrend(csd$su)
 csd$wo_dt <- detrend(csd$wo) 
 ```
 
-Let's take a look at the effec of detreding. If we plot positve affect over
+Let's take a look at the effect of detreding. If we plot positve affect over
 time, we see a gradually increase, and two embedded subtrends. The detrended
 variable does not display these trends anymore.
 
@@ -230,7 +218,7 @@ for(i in 30:max(csd$dayno)){
 
 ## Mood state variance
 
-We can now plot the mood state standard deviation and lag-1 autocorrelation. Did
+We can now plot the mood state standard deviation and lag-1 auto-correlation. Did
 these statistics, as predicted, increase considerably prior to relapse onset?
 
 ```{r cs1310, fig.asp = .3, fig.cap="Three plots."}
@@ -249,27 +237,81 @@ bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
 Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
 dui viverra.
 
+```{r}
+# detrend 2
+
+detrend2 <- function(state, t) {
+  fm <- lm(scale(state) ~ t)
+  residuals(fm)
+} 
+
+b <- subset(csd, dayno < 127)
+b$t <- as.POSIXct(paste(b$date, b$resptime_s))
+
+b <- b %>% group_by(phase) %>% mutate(pa_dt2 = detrend2(-pa, t))
+b <- b %>% group_by(phase) %>% mutate(na_dt2 = detrend2(na, t))
+b <- b %>% group_by(phase) %>% mutate(mu_dt2 = detrend2(mu, t))
+b <- b %>% group_by(phase) %>% mutate(wo_dt2 = detrend2(wo, t))
+b <- b %>% group_by(phase) %>% mutate(su_dt2 = detrend2(su, t))
+b <- ungroup(b, phase)
+
+
+net = data.frame()
+for(p in 1:4){
+  fm.pa <- lm(pa_dt2 ~ -1 + 
+                      lag(pa_dt2) + lag(na_dt2) + lag(mu_dt2) + 
+                      lag(wo_dt2) + lag(su_dt2), 
+             data = subset(b, as.numeric(phase) == p))
+  fm.na <- update(fm.pa, na_dt2 ~ .)
+  fm.mu <- update(fm.pa, mu_dt2 ~ .)
+  fm.wo <- update(fm.pa, wo_dt2 ~ .)
+  fm.su <- update(fm.pa, su_dt2 ~ .)
+  
+  net <- rbind(net, data.frame(cbind(phase = p, ms = "pa", tidy(fm.pa) )))
+  net <- rbind(net, data.frame(cbind(phase = p, ms = "na", tidy(fm.na) )))
+  net <- rbind(net, data.frame(cbind(phase = p, ms = "mu", tidy(fm.mu) )))
+  net <- rbind(net, data.frame(cbind(phase = p, ms = "wo", tidy(fm.wo) )))
+  net <- rbind(net, data.frame(cbind(phase = p, ms = "su", tidy(fm.su) )))
+}
+
+subset(net, p.value < .05 & phase == 1)
+subset(net, p.value < .05 & phase == 2)
+subset(net, p.value < .05 & phase == 3)
+subset(net, p.value < .05 & phase == 4)
+```
+
+
+Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
+bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque.
+Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus
+dui viverra.
+
 ```{r cs1310b, fig.asp = .6, fig.cap = "Fitted Network."}
 library(graphicalVAR)
 
 fit_net <- function(d){
-  nodes <- d %>% select(na_dt, pa_dt, mu_dt, wo_dt, su_dt, dayno)
-  net <- graphicalVAR(data = nodes, gamma = 0, scale = FALSE,
-                      nLambda = 40, verbose = FALSE,
+  nodes <- d %>% select(na_dt2, pa_dt2, mu_dt2, wo_dt2, su_dt2, dayno)
+  net <- graphicalVAR(data = nodes, gamma = 0.25, scale = FALSE,
+                      #lambda_beta = 0, lambda_kappa = 0,
+                      nLambda = 20, verbose = FALSE,
                       dayvar = "dayno")
   
   plot(net, "PDC", title = FALSE, 
        labels = c("NA", "PA", "MU", "WO", "SU"),
        layout = "circle", theme = "classic", 
-       vsize = 22, mar = c(10, 10, 10, 10),
+       maximum = .45,
+       vsize = 18, mar = c(10, 10, 10, 10),
        usePCH = TRUE, label.scale = FALSE)
+  
+  net
 }
 
 layout(matrix(c(1:4), ncol=2, byrow = TRUE))
-p1 <- fit_net(subset(csd, as.numeric(phase) == 1))
-p2 <- fit_net(subset(csd, as.numeric(phase) == 2))
-p3 <- fit_net(subset(csd, as.numeric(phase) == 3))
-p4 <- fit_net(subset(csd, as.numeric(phase) == 4 & dayno < 127))
+p1 <- fit_net(subset(b, as.numeric(phase) == 1))
+p2 <- fit_net(subset(b, as.numeric(phase) == 2))
+p3 <- fit_net(subset(b, as.numeric(phase) == 3))
+p4 <- fit_net(subset(b, as.numeric(phase) == 4 & dayno < 120))
+layout(1)
 ```
 
 Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc,
@@ -279,16 +321,16 @@ dui viverra.
 
 ```{r}
 library(qgraph)
-d <- centralityTable(p1) %>% filter(grepl('Strength', measure)) %>% 
+d <- centralityTable(p1$PDC) %>% filter(grepl('Strength', measure)) %>% 
        select(node, value) %>% mutate(phase = 1)
 d <- rbind(d,
-       centralityTable(p2) %>% filter(grepl('Strength', measure)) %>% 
+       centralityTable(p2$PDC) %>% filter(grepl('Strength', measure)) %>% 
        select(node, value) %>% mutate(phase = 2))
 d <- rbind(d,
-       centralityTable(p3) %>% filter(grepl('Strength', measure)) %>% 
+       centralityTable(p3$PDC) %>% filter(grepl('Strength', measure)) %>% 
        select(node, value) %>% mutate(phase = 3))
 d <- rbind(d,
-       centralityTable(p4) %>% filter(grepl('Strength', measure)) %>% 
+       centralityTable(p4$PDC) %>% filter(grepl('Strength', measure)) %>% 
        select(node, value) %>% mutate(phase = 4))
 
 d$value = abs(d$value)
